--- a/TaskManagerTelegramBot_Vinokurov.csproj
+++ b/TaskManagerTelegramBot_Vinokurov.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
     <PackageReference Include="Telegram.Bot" Version="22.7.6" />
   </ItemGroup>
 </Project>
